force-app/main/default/objects/VisitReport__c/VisitReport__c.object-meta.xml
<CustomObject>
    <label>Visit Report</label>
    <nameField>
        <label>Visit Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>