force-app/main/default/objects/VisitReport__c/fields/Goal_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Goal_Achieved__c</fullName>
    <label>Goal Achieved</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Achieved</fullName>
            </value>
            <value>
                <fullName>Partially Achieved</fullName>
            </value>
            <value>
                <fullName>Not Achieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>