force-app/main/default/objects/VisitReport__c/fields/Main_Goal__c.field-meta.xml
<CustomField>
    <fullName>Main_Goal__c</fullName>
    <label>Main Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Main_Goal</valueSetName>
    </valueSet>
</CustomField>