force-app/main/default/objects/VisitReport__c/listViews/My_Visit_Reports.listView-meta.xml
<ListView>
    <fullName>My_Visit_Reports</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <label>My Visit Reports</label>
</ListView>